[package]
name = "simple_wl_event_test"
version = "0.1.0"
authors = ["pentamassiv <pentamassiv@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zwp-input-method = "0.1.0"
wayland-client = {version="0.27.0", features = ["use_system_lib"]}
wayland-protocols = {version="0.27.0", features = ["client", "unstable_protocols"]}
zwp-virtual-keyboard = "0.1.0"
glib = "0.10.1"
libc = "0.2.74"
memmap = "0.7.0"
tempfile = "3.1.0"
input_event_codes_hashmap = "0.1.0"

[dependencies.input_method_service]
path = "../input_method_service"